--- a/pom.xml
+++ b/pom.xml
@@ -1,117 +1,107 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-
-	<groupId>com.redhat.openshift</groupId>
-	<artifactId>openshift-cartridge-jboss-wmq</artifactId>
-	<version>1.0.3</version>
-	<packaging>rpm</packaging>
-
-	<name>openshift-cartridge-jboss-wmq</name>
-	<url>http://maven.apache.org</url>
-
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<wmq.version>7.0.1.7</wmq.version>
-		<wmq.jndiName>java:jboss/eis/MQCF</wmq.jndiName>
-		<wmq.host>MYHOST</wmq.host>
-		<wmq.port>MYPORT</wmq.port>
-		<wmq.channel>MYCHANNEL</wmq.channel>
-		<wmq.queueManager>MYQUEUEMANAGER</wmq.queueManager>
-	</properties>
-
-	<build>
-		<resources>
-			<resource>
-				<directory>src/main/resources</directory>
-				<filtering>true</filtering>
-				<excludes>
-					<exclude>**/*.rar</exclude>
-				</excludes>
-			</resource>
-			<resource>
-				<directory>src/main/resources</directory>
-				<filtering>false</filtering>
-				<includes>
-					<include>**/*.rar</include>
-				</includes>
-			</resource>
-		</resources>
-		<plugins>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>rpm-maven-plugin</artifactId>
-				<version>2.1-alpha-3</version>
-			</plugin>
-			<plugin>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <version>2.4</version>
-            </plugin>
-		</plugins>
-		<pluginManagement>
-			<plugins>
-				<plugin>
-					<groupId>org.codehaus.mojo</groupId>
-					<artifactId>rpm-maven-plugin</artifactId>
-					<extensions>true</extensions>
-					<executions>
-						<execution>
-							<id>attach-rpm</id>
-							<goals>
-								<goal>attached-rpm</goal>
-							</goals>
-						</execution>
-					</executions>
-					<configuration>
-						<name>openshift-cartridge-jboss-wmq</name>
-						<finalName>${project.artifactId}-${project.version}</finalName>
-						<appendAssemblyId>false</appendAssemblyId>
-						<versionProperty>${project.version}</versionProperty>
-						<summary>OpenShift Enterprise 2.x cartridge which embeds WebSphere MQ configuration in EAP 6</summary>
-						<group>Applications/Systems</group>
-						<defaultFilemode>755</defaultFilemode>
-						<defaultGroupname>root</defaultGroupname>
-						<copyright>LGPL</copyright>
-						<needarch>noarch</needarch>
-						<description>OpenShift Enterprise 2.x cartridge which embeds WebSphere MQ configuration in EAP 6</description>
-						<mappings>
-							<mapping>
-								<directory>/usr/libexec/openshift/cartridges/jboss-wmq</directory>
-								<sources>
-									<source>
-										<location>target/classes/cartridge</location>
-									</source>
-								</sources>
-							</mapping>
-						</mappings>
-
-                        <keyname>D3AABAF5</keyname>
-                          <keyPassphrase>
-                            <passphrase>redhat</passphrase>
-                          </keyPassphrase>
-
-					</configuration>
-				</plugin>
-				<plugin>
-                    <artifactId>maven-assembly-plugin</artifactId>
-                    <version>2.4</version>
-                    <configuration>
-                         <descriptors>
-                              <descriptor>src/assemble/distribution.xml</descriptor>
-                         </descriptors>
-                         <appendAssemblyId>false</appendAssemblyId>
-                    </configuration>
-                    <executions>
-                         <execution>
-                              <id>make-assembly</id>
-                              <phase>package</phase>
-                              <goals>
-                                  <goal>single</goal>
-                              </goals>
-                         </execution>
-                    </executions>
-                </plugin>
-			</plugins>
-		</pluginManagement>
-	</build>
+<?xml version="1.0"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
+  <groupId>com.redhat.openshift</groupId>
+  <artifactId>openshift-cartridge-jboss-wmq</artifactId>
+  <version>1.0.3</version>
+  <packaging>rpm</packaging>
+  <name>openshift-cartridge-jboss-wmq</name>
+  <url>http://maven.apache.org</url>
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <wmq.version>7.0.1.7</wmq.version>
+    <wmq.jndiName>java:jboss/eis/MQCF</wmq.jndiName>
+    <wmq.host>MYHOST</wmq.host>
+    <wmq.port>MYPORT</wmq.port>
+    <wmq.channel>MYCHANNEL</wmq.channel>
+    <wmq.queueManager>MYQUEUEMANAGER</wmq.queueManager>
+  </properties>
+  <build>
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+        <filtering>true</filtering>
+        <excludes>
+          <exclude>**/*.rar</exclude>
+        </excludes>
+      </resource>
+      <resource>
+        <directory>src/main/resources</directory>
+        <filtering>false</filtering>
+        <includes>
+          <include>**/*.rar</include>
+        </includes>
+      </resource>
+    </resources>
+    <plugins>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>rpm-maven-plugin</artifactId>
+        <version>2.1-alpha-3</version>
+      </plugin>
+      <plugin>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <version>2.4</version>
+      </plugin>
+    </plugins>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>rpm-maven-plugin</artifactId>
+          <extensions>true</extensions>
+          <executions>
+            <execution>
+              <id>attach-rpm</id>
+              <goals>
+                <goal>attached-rpm</goal>
+              </goals>
+            </execution>
+          </executions>
+          <configuration>
+            <name>openshift-cartridge-jboss-wmq</name>
+            <finalName>${project.artifactId}-${project.version}</finalName>
+            <appendAssemblyId>false</appendAssemblyId>
+            <versionProperty>${project.version}</versionProperty>
+            <summary>OpenShift Enterprise 2.x cartridge which embeds WebSphere MQ RAR configuration in EAP 6</summary>
+            <group>Applications/Systems</group>
+            <defaultFilemode>755</defaultFilemode>
+            <defaultGroupname>root</defaultGroupname>
+            <copyright>LGPL</copyright>
+            <needarch>noarch</needarch>
+            <description>OpenShift Enterprise 2.x cartridge which embeds WebSphere MQ RAR configuration in EAP 6</description>
+            <mappings>
+              <mapping>
+                <directory>/usr/libexec/openshift/cartridges/jboss-wmq</directory>
+                <sources>
+                  <source>
+                    <location>target/classes/cartridge</location>
+                  </source>
+                </sources>
+              </mapping>
+            </mappings>
+          </configuration>
+        </plugin>
+        <plugin>
+          <artifactId>maven-assembly-plugin</artifactId>
+          <version>2.4</version>
+          <configuration>
+            <descriptors>
+              <descriptor>src/assemble/distribution.xml</descriptor>
+            </descriptors>
+            <appendAssemblyId>false</appendAssemblyId>
+          </configuration>
+          <executions>
+            <execution>
+              <id>make-assembly</id>
+              <phase>package</phase>
+              <goals>
+                <goal>single</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
 </project>
