--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.redhat.openshift</groupId>
   <artifactId>openshift-cartridge-jboss-wmq</artifactId>
-  <version>1.0.3</version>
+  <version>1.0.4</version>
   <packaging>rpm</packaging>
   <name>openshift-cartridge-jboss-wmq</name>
   <url>http://maven.apache.org</url>
@@ -11,10 +11,11 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <wmq.version>7.0.1.7</wmq.version>
     <wmq.jndiName>java:jboss/eis/MQCF</wmq.jndiName>
-    <wmq.host>MYHOST</wmq.host>
-    <wmq.port>MYPORT</wmq.port>
+    <wmq.connectionNameList>MYHOST(MYPORT)</wmq.connectionNameList>
     <wmq.channel>MYCHANNEL</wmq.channel>
     <wmq.queueManager>MYQUEUEMANAGER</wmq.queueManager>
+    <rpm.key.name>D3AABAF5</rpm.key.name>
+    <rpm.key.passphrase>redhat</rpm.key.passphrase>
   </properties>
   <build>
     <resources>
@@ -80,6 +81,10 @@
                 </sources>
               </mapping>
             </mappings>
+            <keyname>${rpm.key.name}</keyname>
+            <keyPassphrase>
+              <passphrase>${rpm.key.passphrase}</passphrase>
+            </keyPassphrase>
           </configuration>
         </plugin>
         <plugin>
